# python-containe-experiment

./: Makefile  pyproject.toml  test.py  whylogs-1.1.21.dev1-py3-none-any.whl
data/: short-data.csv
src/ai/whylabs/container/: main.py  profiling.py  startup.py
